# data-spectrum

./: .gitignore  Dockerfile  LICENSE  README.md  build.sh  docker-compose.yml  pyproject.toml  verify_setup.py
src/api/: routes.py  server.py
src/cli/: main.py  repl.py
src/connectors/: databricks.py  databricks_uc.py  duckdb.py  file_formats.py  file_system.py  rdbms.py  snowflake.py  storage.py  table_formats.py
src/core/: config.py  factory.py  interface.py  models.py  persistence.py  registry.py
tests/integration/: conftest.py  test_api_e2e.py  test_caching.py  test_cli.py  test_config.py  test_duckdb.py  test_rdbms_integration.py  test_s3_integration.py  test_tpcds_flow.py  test_validation.py
utils/: generate_tpcds.py
